<resources>
    <string name="app_name">FilmicPro</string>
    <string name="disclaimer">Постеры представлены: https://www.movieposters.com/</string>
    <string name="button_favorite">Favorite</string>
    <string name="button_russian">Russian</string>
    <string name="button_top">Top</string>
    <string name="button_menu">Menu</string>
    <string name="button_settings">Settings</string>

    <string name="menu_settings_title">Настройки</string>

    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_watch_later_title">Смотреть позже</string>
    <string name="menu_selections_title">Коллекции</string>
    <string name="menu_home_title_text">Домой</string>

    <string name="page_title">Поиск фильмов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_settings_title_text">Настройки</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>


    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>




</resources>